# proof-tool

./: .gitignore  .vercelignore  AGENTS.md  go.mod  go.sum  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: ci.yml  proof-release-coherence.yml  (+2 more)
docs/: browser-proving-asset-hosting.md  browser-proving.md  local-credential-discovery.md  manual-lace-claim-flow-qa-plan.md  native-prover-v2-benchmark-2026-07-13.md  non-technical-ownership-proof-implementation-prompt.md  non-technical-ownership-proof-runbook.md  ownership-proof-app-architecture-plan.md  preprod-e2e.md  proof-assets-release-inventory.md  proof-helper-desktop-security-review.md  proof-helper-desktop-tauri-plan.md  reclaim-claim-flow.md  reclaim-contract-audit-context.md  reclaim-contracts-spec.md  reclaim-destination-binding-plan.md  reclaim-funding-page-plan.md  reclaim-funding-page.md  reclaim-global-multi-credential-plan.md  reclaim-global-multi-proof-fixture-plan.md  reclaim-owner-claim-page-plan.md  reclaim-production-preprod-backend-plan.md  vercel-preprod-browser-proving-deployment-plan.md
experiments/wasm-prover/rust-msm-spike/: Cargo.toml  bench.mjs
experiments/wasm-prover/rust-msm-spike/js-kernels/: bench-js-kernels.mjs  package-lock.json  package.json
experiments/wasm-prover/rust-msm-spike/src/: lib.rs
formal/: .gitignore  ProofToolFormal.lean  README.md  lake-manifest.json  lakefile.lean
formal/haskell/: cabal.project  formal-fixtures.cabal
formal/haskell/src/: FormalHelpers.hs  Main.hs
scripts/: bootstrap-vendor.sh  check-vendor-drift.sh  stage-proof-assets.sh
(+395 files in other folders)
